--- a/farmPAM/.project
+++ b/farmPAM/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>farmPAM</name>
+	<name>farmPAMUtil</name>
 	<comment></comment>
 	<projects>
 	</projects>
